fix(file): 修复文件读取错误-应使用流的方式读取